--- a/index.html
+++ b/index.html
@@ -1,34 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>L'Oréal | Smart Routine &amp; Product Advisor</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>L'Oréal | Smart Routine &amp; Product Advisor</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="page-wrapper">
 
-  <body>
-    <div class="page-wrapper">
-      <!------- Header / Branding ------->
-      <header class="site-header">
-        <img src="img/loreal-logo.png" alt="L'Oréal Logo" class="logo" />
-        <h1 class="site-title">Smart Routine &amp; Product Advisor</h1>
-      </header>
+    <!-- Header -->
+    <header class="site-header">
+      <img src="img/loreal-logo.png" alt="L'Oréal Logo" class="logo" />
+      <h1 class="site-title">Smart Routine &amp; Product Advisor</h1>
+      <div class="controls">
+        <input type="search" id="productSearch" placeholder="Search products..." />
+        <button id="rtlToggle" aria-pressed="false" title="Toggle RTL">
+          <i class="fa-solid fa-arrows-rotate"></i>
+        </button>
+      </div>
+    </header>
 
+    <!-- Main Content -->
+    <main class="main-content" style="grid-area: main;">
       <!-- Category Filter -->
-      <div class="search-section">
+      <section class="search-section">
         <select id="categoryFilter">
-          <option value="" disabled selected>Choose a Category</option>
+          <option value="" disabled selected>Select Category</option>
           <option value="cleanser">Cleansers</option>
-          <option value="moisturizer">Moisturizers & Treatments</option>
+          <option value="moisturizer">Moisturizers &amp; Treatments</option>
           <option value="haircare">Haircare</option>
           <option value="makeup">Makeup</option>
           <option value="hair color">Hair Color</option>
@@ -37,56 +39,53 @@
           <option value="suncare">Suncare</option>
           <option value="fragrance">Fragrance</option>
         </select>
-      </div>
-
+      </section>
       <!-- Products Grid -->
       <div id="productsContainer" class="products-grid"></div>
+    </main>
 
-      <!-- Selected Products -->
-      <div class="selected-products">
+    <!-- Sidebar: Selected Products -->
+    <aside class="selected-products">
+      <div class="selected-header">
         <h2>Selected Products</h2>
-        <div id="selectedProductsList"></div>
-        <button id="generateRoutine" class="generate-btn">
-          <i class="fa-solid fa-wand-magic-sparkles"></i> Generate Routine
+        <button id="clearSelections" title="Clear All">
+          <i class="fa-solid fa-trash"></i>
         </button>
       </div>
+      <div id="selectedProductsList" class="selected-list"></div>
+      <button id="generateRoutine" class="generate-btn">
+        <i class="fa-solid fa-wand-magic-sparkles"></i> Generate Routine
+      </button>
+    </aside>
 
-      <!------- Chat Area ------->
-      <section class="chatbox">
-        <h2>Let's Build Your Routine</h2>
-        <div id="chatWindow" class="chat-window"></div>
+    <!-- Chatbox -->
+    <section class="chatbox">
+      <h2>Let's Build Your Routine</h2>
+      <div id="chatWindow" class="chat-window">
+        <p>Select products and click "Generate Routine" to begin.</p>
+      </div>
+      <form id="chatForm" class="chat-form">
+        <input id="userInput" type="text" placeholder="Ask about your routine..." disabled required />
+        <button type="submit" id="sendBtn" disabled>
+          <i class="fa-solid fa-paper-plane"></i>
+        </button>
+      </form>
+    </section>
 
-        <form id="chatForm" class="chat-form">
-          <label for="userInput" class="visually-hidden">Message</label>
-          <input
-            id="userInput"
-            name="userInput"
-            type="text"
-            placeholder="Ask me about products or routines…"
-            autocomplete="off"
-            required
-          />
-          <button type="submit" id="sendBtn">
-            <i class="fa-solid fa-paper-plane"></i>
-            <span class="visually-hidden">Send</span>
-          </button>
-        </form>
-      </section>
+  </div>
 
-      <!------- Footer Links ------->
-      <footer class="site-footer">
-        <p>&copy; 2025 L'Oréal. All rights reserved.</p>
-        <nav>
-          <!-- These URLs are placeholders -->
-          <a href="#">Privacy Policy</a>
-          <a href="#">Terms of Use</a>
-          <a href="#">Contact</a>
-        </nav>
-      </footer>
+  <!-- Description Modal -->
+  <div id="descriptionModal" class="modal hidden" role="dialog" aria-modal="true">
+    <div class="modal-content">
+      <button id="closeModal" class="modal-close" aria-label="Close">
+        &times;
+      </button>
+      <h3 id="modalProductName"></h3>
+      <p id="modalProductDesc"></p>
     </div>
+  </div>
 
-    <!-- secrets.js can be removed when using Cloudflare Workers for API requests -->
-    <script src="secrets.js"></script>
-    <script src="script.js"></script>
-  </body>
+  <script src="script.js"></script>
+</body>
 </html>
+
